--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy/localhost": "hardhat run scripts/deploy.js --network localhost"
+    "deploy/local": "hardhat run scripts/deploy.js --network localhost"
   },
   "eslintConfig": {
     "extends": [
